Update for java 9