@@ -4,11 +4,12 @@
  */
 package edu.stanford.slac.aida.test;
 
-import edu.stanford.slac.aida.test.utils.AidaPvaTestUtils;
-
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import static edu.stanford.slac.aida.test.utils.AidaPvaTestUtils.*;
 
 /**
  * This class is used to test the SLC Magnet AIDA-PVA provider
@@ -16,22 +17,22 @@ import java.util.HashMap;
 public class SlcMagnetTest {
     public static void main(String[] args) {
         var argString = Arrays.toString(args).replace("]", ",").replace("[", " ");
-        AidaPvaTestUtils.NO_COLOR_FLAG = !argString.contains("-c") && !argString.contains("-color");
-        var allTests = (AidaPvaTestUtils.NO_COLOR_FLAG ? args.length == 0 : args.length == 1);
+        NO_COLOR_FLAG = !argString.contains("-c") && !argString.contains("-color");
+        var allTests = (NO_COLOR_FLAG ? args.length == 0 : args.length == 1);
         var testId = 0;
 
-        AidaPvaTestUtils.testSuiteHeader("AIDA-PVA SLC Magnet TESTS");
+        testSuiteHeader("AIDA-PVA SLC Magnet TESTS");
 
         // 01
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet get without parameters");
-            AidaPvaTestUtils.channel("DEV_DGRP:XCOR:BDES", "BDES").get();
+            testHeader(testId, "Test of magnet get without parameters");
+            request("DEV_DGRP:XCOR:BDES", "BDES").get();
         }
 
         // 02
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet \"get\" with parameters");
-            AidaPvaTestUtils.channel("DEV_DGRP:XCOR:BDES", "BDES")
+            testHeader(testId, "Test of magnet \"get\" with parameters");
+            request("DEV_DGRP:XCOR:BDES", "BDES")
                     .with("MICROS", "LI31-LI31")
                     .with("UNITS", "1-100")
                     .get();
@@ -39,19 +40,19 @@ public class SlcMagnetTest {
 
         // 03
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet get without parameters");
-            AidaPvaTestUtils.channel("DEV_DGRP:XCOR:BDES", "BDES").get();
+            testHeader(testId, "Test of magnet get without parameters");
+            request("DEV_DGRP:XCOR:BDES", "BDES").get();
         }
 
         // 04
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet set");
-            AidaPvaTestUtils.channel("MAGNETSET:BDES", "Magnet Set")
+            testHeader(testId, "Test of magnet set");
+            request("MAGNETSET:BDES", "Magnet Set")
                     .with("MAGFUNC", "TRIM")
-                    .set(new HashMap<String, Object>() {{
-                        put("names", Collections.singletonList("XCOR:LI31:41"));
-                        put("values", Collections.singletonList(4.0f));
-                    }});
+                    .set(Map.of(
+                            "names", List.of("XCOR:LI31:41"),
+                            "values", List.of(4.0f)
+                    ));
         }
 
         // 05
@@ -61,64 +62,64 @@ public class SlcMagnetTest {
                     "\"values\": [4.0]" +
                     "}";
 
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet set using JSON");
-            AidaPvaTestUtils.channel("MAGNETSET:BDES", "Magnet Set")
+            testHeader(testId, "Test of magnet set using JSON");
+            request("MAGNETSET:BDES", "Magnet Set")
                     .with("MAGFUNC", "TRIM")
                     .set(value);
         }
 
         // 06
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet set (duplicate)");
-            AidaPvaTestUtils.channel("MAGNETSET:BDES", "Magnet Set")
+            testHeader(testId, "Test of magnet set (duplicate)");
+            request("MAGNETSET:BDES", "Magnet Set")
                     .with("MAGFUNC", "TRIM")
-                    .set(new HashMap<String, Object>() {{
-                        put("names", Collections.singletonList("XCOR:LI31:41"));
-                        put("values", Collections.singletonList(4.0f));
-                    }});
+                    .set(Map.of(
+                            "names", List.of("XCOR:LI31:41"),
+                            "values", List.of(4.0f)
+                    ));
         }
 
         // 07
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Error handling invalid name: magnet set");
-            AidaPvaTestUtils.channel("MAGNETSET:BDES", "Magnet Set")
+            testHeader(testId, "Error handling invalid name: magnet set");
+            request("MAGNETSET:BDES", "Magnet Set")
                     .with("MAGFUNC", "TRIM")
                     .setAndExpectFailure(new HashMap<String, Object>() {{
-                        put("names", Collections.singletonList("XCOZ:LI31:41"));
-                        put("values", Collections.singletonList(4.0f));
+                        put("names", List.of("XCOZ:LI31:41"));
+                        put("values", List.of(4.0f));
                     }});
         }
 
         // 08
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Error handling values out of limits: magnet set");
-            AidaPvaTestUtils.channel("MAGNETSET:BDES", "Magnet Set")
+            testHeader(testId, "Error handling values out of limits: magnet set");
+            request("MAGNETSET:BDES", "Magnet Set")
                     .with("MAGFUNC", "TRIM")
-                    .setAndExpectFailure(new HashMap<String, Object>() {{
-                        put("names", Collections.singletonList("XCOR:LI31:41"));
-                        put("values", Collections.singletonList(10.0f));
-                    }});
+                    .setAndExpectFailure(Map.of(
+                            "names", List.of("XCOR:LI31:41"),
+                            "values", List.of(10.0f)
+                    ));
         }
 
         // 09
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet set without trim or perturb");
-            AidaPvaTestUtils.channel("MAGNETSET:BDES", "Magnet Set")
+            testHeader(testId, "Test of magnet set without trim or perturb");
+            request("MAGNETSET:BDES", "Magnet Set")
                     .with("MAGFUNC", "NOFUNC")
-                    .set(new HashMap<String, Object>() {{
-                        put("names", Collections.singletonList("XCOR:LI31:41"));
-                        put("values", Collections.singletonList(5.0f));
-                    }});
+                    .set(Map.of(
+                            "names", List.of("XCOR:LI31:41"),
+                            "values", List.of(5.0f)
+                    ));
         }
 
         // 10
         if (argString.contains(" " + ++testId + ",") || allTests) {
-            AidaPvaTestUtils.testHeader(testId, "Test of magnet set, setting the configuration secondary BCON");
-            AidaPvaTestUtils.channel("MAGNETSET:BCON", "Magnet Set")
-                    .set(new HashMap<String, Object>() {{
-                        put("names", Collections.singletonList("XCOR:LI31:41"));
-                        put("values", Collections.singletonList(5.0f));
-                    }});
+            testHeader(testId, "Test of magnet set, setting the configuration secondary BCON");
+            request("MAGNETSET:BCON", "Magnet Set")
+                    .set(Map.of(
+                            "names", List.of("XCOR:LI31:41"),
+                            "values", List.of(5.0f)
+                    ));
         }
         // Because of threads started in background to process requests
         System.exit(0);
